<resources>
    <string name="app_name">Android Chat</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="reset_password">Reset password</string>
    <string name="login">Login</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_confirm_password">Confirm password</string>
    <string name="signUp">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="email_required">Enter email</string>
    <string name="name_required">Name required</string>
    <string name="confirm_password_required">Please confirm your password</string>
    <string name="email_format_invalid">Email format is invalid</string>
    <string name="password_confirm_password_not_equals">Password and confirm password are not equals</string>
    <string name="user_created_successfully">User created successfully</string>
    <string name="signup_failed">Sign up failed</string>
    <string name="user_creation_failed">User creation failed</string>
    <string name="user_update_failed">User update failed</string>
    <string name="access_permission_is_required">Access is permission is required</string>
</resources>